--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-9" id="header">
-                
+            <div class="col-12" id="header">
+                <div id="header-image">
+                    <img class="img-fluid" src="./images/wood-light.jpg.jpg" alt="wood lights">
+                    <div id="header-text-container">
+                        <h1 id=header-text>
+                           Mesh & Mia <br> M&sup2;
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
