--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <div class="row">
             <div class="col-12" id="header">
                 <div id="header-image">
-                    <img class="img-fluid" src="./images/wood-light.jpg.jpg" alt="wood lights">
+                    <img id="header-pic" class="img-fluid" src="./images/wood-light.jpg.jpg" alt="wood lights">
                     <div id="header-text-container">
                         <h1 id=header-text>
                            Mesh & Mia <br> M&sup2;
                         </h1>
                     </div>
+                    <div class="banner--fadebottom"></div>
                 </div>
             </div>
         </div>
