header kinda done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Mesh & Mia</title>
 </head>
 <body>
+    <!-- Header Start -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-12" id="header">
@@ -23,6 +24,15 @@
             </div>
         </div>
     </div>
+    <!-- Header End -->
+    <!-- Our Story Start -->
+    <div class="container-fluid">
+        <div class="row justify-content-between">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        </div>
+    </div>
+    <!-- Our Story End -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
