--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12" id="header">
-                <div id="header-image">
-                    <img id="header-pic" class="img-fluid" src="./images/wood-light.jpg.jpg" alt="wood lights">
+                <div id="header-box">
+                    <img id="header-pic" class="img-fluid" src="./images/together.jpg" alt="wood lights">
                     <div id="header-text-container">
                         <h1 id=header-text>
                            Mesh & Mia <br> M&sup2;
