--- a/index.html
+++ b/index.html
@@ -13,28 +13,62 @@
         <div class="row">
             <div class="col-12" id="header">
                 <div id="header-box">
-                    <img id="header-pic" class="img-fluid" src="./images/together.jpg" alt="wood lights">
+                    <img id="header-pic" class="img-fluid" src="./images/together.jpg" alt="together picture">
                     <div id="header-text-container">
                         <h1 id=header-text>
-                           Mesh & Mia <br> M&sup2;
+                            M-Squared<br><span id="dates">12/26/2020 <span id=arrow>l11J</span> forever</span>
                         </h1>
                     </div>
-                    <div class="banner--fadebottom"></div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div id="invite-box" class="container-fluid">
+        <div class="row justify-content-between">
+            <div id="invite" class="col-12">
+                <div id="invite-left" class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><span class="headingText">Mesh & Mia<br><span class="cursive">cordially invite you</span></span></div>
+                <div id="invite-right" class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><span class="headingText"><span class=cursive>to celebrate their</span><br>Wedding</span></div>
             </div>
         </div>
     </div>
     <!-- Header End -->
     <!-- Our Story Start -->
-    <div class="container-fluid">
-        <div class="row justify-content-between">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+    <div id="story" class="container-fluid">
+        <div class="row">
+            <div id="our-story" class="col-12">
+                <h1 class="headingText">Our Story</h1>
+                <div id="story-box">
+                    <img id="story-pic" class="img-fluid" src="./images/together.jpg" alt="wood lights">
+                    <div id="story-text">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia nemo modi rem numquam molestiae? Sed explicabo ab esse molestias quisquam maxime iure alias! Iste eum laudantium dicta praesentium incidunt! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, magnam laboriosam optio consectetur veniam voluptates qui exercitationem perspiciatis atque sint aperiam ratione, numquam asperiores, iste enim ipsam id. Laborum, maiores.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Our Story End -->
 
 
+
+
+
+
+
+
+
+
+    <audio id="blanco" src="/music/benny blanco, Halsey & Khalid Eastside (official video).mp3">
+        <p>If you are reading this, it is because your browser does not support the audio element.</p>
+    </audio>
+    <script>
+        var replay = document.getElementById("blanco");
+        replay.loop = true;
+        var auto = document.getElementById("blanco");
+        auto.autoplay = true;
+        auto.load();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
