--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div id="story" class="container-fluid">
         <div class="row">
             <div id="our-story" class="col-12">
-                <h1 class="headingText">Our Story</h1>
+                <h1 class="fancy headingText">Our Story<br><span class="berg">l</span></h1>
                 <div id="story-box">
-                    <img id="story-pic" class="img-fluid" src="./images/together.jpg" alt="wood lights">
+                    <img id="story-pic" class="img-fluid" src="./images/gallery-pics/pic7.jpg" alt="heart">
                     <div id="story-text">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia nemo modi rem numquam molestiae? Sed explicabo ab esse molestias quisquam maxime iure alias! Iste eum laudantium dicta praesentium incidunt! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, magnam laboriosam optio consectetur veniam voluptates qui exercitationem perspiciatis atque sint aperiam ratione, numquam asperiores, iste enim ipsam id. Laborum, maiores.
