--- a/index.html
+++ b/index.html
@@ -36,12 +36,36 @@
     <div id="story" class="container-fluid">
         <div class="row">
             <div id="our-story" class="col-12">
-                <h1 class="fancy headingText">Our Story<br><span class="berg">l</span></h1>
+                <h1 class="headingText">Our Story<br><span class="berg">l</span></h1>
                 <div id="story-box">
-                    <img id="story-pic" class="img-fluid" src="./images/gallery-pics/pic7.jpg" alt="heart">
-                    <div id="story-text">
+                    
+                    <div id="story-text-box">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur officia nemo modi rem numquam molestiae? Sed explicabo ab esse molestias quisquam maxime iure alias! Iste eum laudantium dicta praesentium incidunt! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, magnam laboriosam optio consectetur veniam voluptates qui exercitationem perspiciatis atque sint aperiam ratione, numquam asperiores, iste enim ipsam id. Laborum, maiores.
+                            <span class="story-head">It started in 2011...</span>
+                            <br> 
+                            <img id="story-1" class="story-pic" class="img-fluid" src="./images/facebook2.JPG" alt="firsts">
+                            <br>
+                            You could say was when this initially started. From a party at the community center, 
+                            and walking at the park when Mesh pulled up on me cause she just had to speak. Of course, 
+                            life and time is of the essence. We went our separate ways and very quickly did 6 years pass by.
+                            <br>
+                            <br>
+                            <span class="story-head">January 13th, 2017</span>
+                            <br>
+                            <img id="story-2" class="story-pic" class="img-fluid" src="./images/facebook.JPG" alt="facebook">
+                            <br>
+                            From there we were/are inseparable... My best friend , teacher , confidant , and lastly my life long partner. 
+                            This is exactly where we are meant to be.... together. Needless to say, there aren’t many love stories that have 
+                            so much background and how that boomerang effect really works. 
+                            We were meant to be from the start, 
+                            and i wouldn’t want it to be any other way. 
+                            Hope you enjoy a peek into a whole lot of love laughter & mountains we’ve had to go through to grow the union we have today.
+                            <br>
+                            Much love,
+                            <br>
+                            <span class="story-head">
+                                The Martins ❤️
+                            </span>
                         </p>
                     </div>
                 </div>
@@ -49,6 +73,44 @@
         </div>
     </div>
     <!-- Our Story End -->
+    <!-- Gallery Start -->
+    <div id="gallery" class="container-fluid">
+        <div class="row">
+            <div id="our-gallery" class="col-12">
+                <h1 class="headingText">Gallery<br><span class="berg">l</span></h1>
+                <div id="gallery-box">
+                    <div id="gallery-image-box">
+                        <h1>
+                            <span class="gallery-head">Us Over The Years</span>
+                        </h1>
+                        <br>
+                        <div class="container">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic1.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic2.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic3.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic4.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic5.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic6.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic7.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic8.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic9.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic10.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic12.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic13.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/our-firsts.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Gallery End -->
+    <!-- Roster Start -->
+
+    <!-- Roster End -->
+    <!-- Zoom Link Start -->
+
+    <!-- Zoom Link End -->
 
 
 
