--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic3.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic4.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic5.jpg" alt="">
+                            <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic14.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic6.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic7.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic8.jpg" alt="">
@@ -98,6 +99,7 @@
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic12.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/pic13.jpg" alt="">
                             <img class="img-fluid gallery-pic" src="./images/gallery-pics/our-firsts.jpg" alt="">
+                            
                         </div>
                     </div>
                 </div>
