--- a/index.html
+++ b/index.html
@@ -206,12 +206,101 @@
         </div>
     </div>
     <!-- Gallery End -->
-    <!-- Roster Start -->
-
-    <!-- Roster End -->
+    <!-- Gifts Start -->
+    <div id="gift" class="container-fluid">
+        <div class="row">
+            <div id="our-gift" class="col-12">
+                <h1 class="headingText">Gifts<br><span class="berg">l</span></h1>
+                <div id="gift-box">
+                    <div id="gift-text-box">
+                        <h1>
+                            <span class="gallery-head">We are accpting gifts through our Amazon Registry and CashApp</span>
+                        </h1>
+                        <br>
+                        <div class="row justify-content-center">
+                            <div class="gift-link-box col-3">
+                              <a href="https://www.amazon.com/wedding/share/themartins-dec2020?fbclid=IwAR3V_
+                              jq2XsdiqniJ8XStEhWvQ00Jh5tDUD7kzf8qZWRXjiCZLIJkIlGhslI">
+                              <i class="gift-link fab fa-amazon"></i>
+                              </a>
+                            </div>
+                            <div class="gift-link-box col-3">
+                                <a href="https://cash.app/$NxxxtLvl?fbclid=IwAR2E9wSo5VxrHKVdtUVOr1vKha5uQiqDqa4Zd
+                                EI8sc0NTePNUQwW5lLx6Pk">
+                                    <i class="gift-link fas fa-dollar-sign"></i>
+                                </a>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Gifts End -->
+    <div id="sponsor" class="container-fluid">
+        <div class="row">
+            <div id="our-sponsor" class="col-12">
+                <h1 class="headingText">Our Sponsors<br><span class="berg">l</span></h1>
+                <div id="sponsor-box">
+                    <div id="sponsor-text-box">
+                        <h1>
+                            <span class="gallery-head">A very speacial thank you to all our sponsors.</span>
+                        </h1>
+                        <br>
+                        <div class="spon-container">
+                            <a href="https://www.instagram.com/yougotitgirlfitness/"><img class="spon-pic" src="./images/sponsors/spon3.jpg" alt=""></a>
+                            <a href="https://www.deythamua.com/"><img class="spon-pic" src="./images/sponsors/spon2.jpg" alt=""></a>
+                            <a href="https://www.facebook.com/DrinksOnFleek"><img class="spon-pic" src="./images/sponsors/spon4.jpg" alt=""></a>
+                            <a href="https://www.lavaeorganics.com/"><img class="spon-pic" src="./images/sponsors/spon1.jpg" alt=""></a>
+                            <a href="https://www.joparadev.com/"><img class="spon-pic"src="./images/sponsors/spon5.jpg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Zoom Link Start -->
-
+    <div id="zoom" class="container-fluid">
+        <div class="row">
+            <div id="our-zoom" class="col-12">
+                <h1 class="headingText">Join Us<br><span class="berg">l</span></h1>
+                <div id="zoom-box">
+                    <div id="zoom-text-box">
+                        <h1>
+                            <span class="gallery-head">Join our wedding celebration via Zoom</span>
+                        </h1>
+                        <br>
+                        <h6 style="font-weight: 200;">Meeting ID: 770 8156 4768
+                            Passcode: 01132017
+                        </h6>
+                        <br>
+                        <div class="row justify-content-center">
+                            <div class="gift-link-box col-9">
+                              <a href="https://us04web.zoom.us/j/77081564768?pwd=N0IxdWcxcHdyamFEWHhWSHpEcmh1Zz09">
+                              <img class="zoom" src="./images/5e8ce318664eae0004085461.png" >
+                              </a>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Zoom Link End -->
+    <div id="zoom" class="container-fluid">
+        <div class="row">
+            <div id="our-zoom" class="col-12">
+                <h1 class="headingText">Love and Blessings Forever<br><span class="berg">l</span></h1>
+                <div id="zoom-box">
+                    <div id="zoom-text-box">
+                        <h4>
+                            <span >This website was designed and built by <a id="jopara" href="https://joparadev.com">JoparaDev</a></span>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
