--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div id="sponsor-box">
                     <div id="sponsor-text-box">
                         <h1>
-                            <span class="gallery-head">A very speacial thank you to all our sponsors.</span>
+                            <span class="gallery-head">A very special thank you to all our sponsors.</span>
                         </h1>
                         <br>
                         <div class="spon-container">
